--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     background-color: beige;
 }
 main{
+    margin-top: 30px;
     display: flex;
     flex-direction: column
 }
@@ -9,6 +10,9 @@ main{
     width:30px;
     height:30px;
     }
+.hidden{
+    display: none
+}
 #playAgain{
     margin: 50px auto; 
     text-align: center;
@@ -35,6 +39,12 @@ main{
     height:30px;
     }
 
+#victoryMessage{
+    animation: victoryAnimation 0.5s ease 0s infinite alternate none;
+    text-align:center;
+    font-size: 30px;
+}
+
 .line{
     justify-content: center;
     display:flex
@@ -44,3 +54,19 @@ main{
     width:30px;
     height:30px;
     }
+
+
+@keyframes victoryAnimation {
+        0.0%{
+        }
+        100%{
+            color: green;
+        }
+    }
+    
+@keyframes slideRight {
+        from {margin-left: -33px;}
+        to {margin-left: 0;}
+        }
+        
+       
